--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Times New Roman", Times, serif;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: Outfit;
 }
-
-body {
-    font-family: "Times New Roman", Times, serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
-#root {
+#root{
   min-height: 100vh;
   display: flex;
   animation: fadeIn 1.5s;
 }
-
 @keyframes fadeIn {
-  0% {
+  0%{
     opacity: 0;
   }
-  100% {
+  100%{
     opacity: 1;
   }
 }
