Add: context_integration

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,8 +1,9 @@
-.sidebar{
+.sidebar {
     min-height: 100vh;
-    display: inline-flex;
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     background-color: #e2e6eb;
     padding: 25px 15px;
 }
@@ -62,6 +63,20 @@
     background-color: #e2e6eb;
 }
 
+.sidebar .bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+    padding-left: 30px;
+}
+
+.sidebar .bottom-item {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
 .sidebar .buttom{
     display: flex;
     flex-direction: column;
@@ -70,6 +85,35 @@
 .sidebar .buttom-item{
     padding-right: 10px;
     cursor: pointer;
+}
+
+.sidebar .sidebar-link {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 12px 21px;
+    margin: 1px 0;
+    border-radius: 10px;
+    color: #333030;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+    margin-bottom: 1px; 
+}
+
+.sidebar .sidebar-link:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.sidebar .sidebar-link svg {
+    flex-shrink: 0;
+}
+
+.sidebar-link.active-link {
+    background-color: #fd6d1ae9; 
+}
+
+.sidebar-link.active-link .svg-icon {
+    fill: #4A90E2 !important;
 }
 
 @media (max-width:600px) {
